--- a/RetailDataAnalysis.ipynb
+++ b/RetailDataAnalysis.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "3ccb0075-8256-4183-9e05-b6f984b547f9",
    "metadata": {
     "collapsed": true,
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "3075c522-2ab1-4c50-bc84-f95ba90dc99c",
    "metadata": {
     "collapsed": true,
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "94ae19f5-656b-4c8a-a9a1-a8af94acbca8",
    "metadata": {
     "collapsed": true,
@@ -470,7 +470,6 @@
     }
    ],
    "source": [
-    "# Display the first few rows of each dataset\n",
     "print(\"Features Data:\")\n",
     "print(features.info())\n",
     "\n",
@@ -491,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "f9953735-dca7-43ec-876f-c8fbee27f01b",
    "metadata": {
     "collapsed": true,
@@ -615,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "eeca04f9-db80-455d-906c-7726e26c9f46",
    "metadata": {
     "collapsed": true,
@@ -681,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "012f328c-f114-464f-b873-60555fca8763",
    "metadata": {
     "collapsed": true,
@@ -706,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "id": "a2d2edfa-f6fc-4d37-ac0e-69bbd6d20403",
    "metadata": {
     "collapsed": true,
@@ -719,7 +718,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Merged dataset characteristics:\n",
+      "Merged dataset characteristics :\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 421570 entries, 0 to 421569\n",
       "Data columns (total 17 columns):\n",
@@ -791,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "f71ef030-5c01-4686-b209-806f13025645",
    "metadata": {
     "collapsed": true,
@@ -979,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "cbfaa572-d7a7-49a6-9a2f-75c7c1fd801d",
    "metadata": {
     "collapsed": true,
@@ -1011,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "1bc8ab2c-2170-4b75-b709-5303ba7faedd",
    "metadata": {
     "collapsed": true,
@@ -1035,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "54651820",
    "metadata": {
     "collapsed": true,
@@ -1291,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "5da34f3b-962f-4960-abbb-34df26d6bb44",
    "metadata": {
     "collapsed": true,
@@ -1380,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "id": "80dab511-2e2d-42fd-82a8-3ba6eef73b27",
    "metadata": {
     "collapsed": true,
@@ -1431,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "id": "3f771247-ab15-42ce-b79b-3c9160f7678f",
    "metadata": {
     "collapsed": true,
@@ -1503,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "id": "a6addb74-543d-4a44-84f7-caa504921e62",
    "metadata": {
     "collapsed": true,
@@ -1552,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "id": "1624115f",
    "metadata": {},
    "outputs": [
@@ -1597,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "563ca1ce",
    "metadata": {},
    "outputs": [
@@ -1863,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "id": "842e0bac",
    "metadata": {},
    "outputs": [
@@ -1989,7 +1988,7 @@
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# Standart Scaler\n",
+    "# Standard Scaler\n",
     "scaler = StandardScaler()\n",
     "X_train_scaled = scaler.fit_transform(X_train)\n",
     "X_test_scaled = scaler.transform(X_test)\n",
@@ -2008,7 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "fb042e16",
    "metadata": {},
    "outputs": [
@@ -2048,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "4c887f32",
    "metadata": {},
    "outputs": [
@@ -2094,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "id": "272c9a57",
    "metadata": {},
    "outputs": [
